--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,3 +22,6 @@ server:
 jwt:
   secret: rJ6bX9uF3mV8QkL2wYcT1pNz7Hs4dEaU0iGvB5xMtRs=
   expiration: 86400000
+
+app:
+  jwtRefreshExpirationMs: 6040800000
